# PRoz-Portal

./: .gitignore  CMakeLists.txt  README.md  common.cpp  common.h  communicator.cpp  communicator.h  debug.sh  globals.h  main  main.cpp  mainProgram.cpp  mainProgram.h  makefile  portal.cpp  portal.h  receiver.cpp  receiver.h  run.sh  run2.sh  utils.cpp  utils.h
